# harmonix

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yaml  pyproject.toml
core/: __init__.py  harmonix.py  solution.py  utils.py  visibility.py
docs/: api.md  index.md  requirements.txt
proofs/: AnalyticFT.ipynb  BasisTransforms.ipynb  BruteForce_comparison.ipynb  Covariances.ipynb  NonlinearCovariance.ipynb
src/harmonix/: SphericalHarmonicsResults_10.txt  __init__.py  harmonix.py  solution.py  test_utils.py  utils.py
tests/: test_analytic.py  test_bruteforce.py
